# tg-export

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
crates/asbestos/: Cargo.toml  README.md  flake.nix
crates/asbestos/src/: app.rs  lib.rs  main.rs
crates/texport/: Cargo.toml
crates/texport/examples/: dir_info.rs  full.rs  stats.rs  to_txt.rs
crates/texport/src/: lib.rs  messages.rs  storage.rs
crates/texport/tests/fixtures/td_single/chat_1/: result.json
examples/: stats.rs  to_txt.rs
src/: lib.rs  messages.rs  stats.rs
