[package]
name = "tg-export"
version = "0.0.1"
edition = "2024"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["std"] }
clap = { version = "4.5", features = ["derive"] }
indexmap = { version = "2.9.0", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
stop-words = { version = "0.8", features = ["nltk"] }
thiserror = "2"
