[package]
name = "texport"
version = "0.0.2"
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
directories-next = "2"
fs-err = "3.1"
indexmap = { version = "2.9.0", features = ["serde"] }
log.workspace = true
serde_json.workspace = true
serde.workspace = true
stop-words = { version = "0.8", features = ["nltk"] }
thiserror.workspace = true
